# Ecn

./: README.md
Biglide _simulation ros2/ros2/install/lab_amoro/share/lab_amoro/: package.dsv  package.ps1  package.sh  package.zsh
Biglide _simulation ros2/ros2/src/lab_amoro/student_scripts/: biglide_models.py  control.py  model_eval.py
C++_projects/: CMakeLists.txt
CoppeliaSim/: pick_place_Final_object_aoidance.ttt
Pick and Place with Dellmia/rob2/Griper/Griper/: Griper.CATProduct  Griper_Moving_part_1.CATPart  Griper_Moving_part_2.CATPart  Griper_base.CATPart
Pick and Place with Dellmia/rob2/Puma/Puma/: PUMA_PW.CATProduct  Puma_Link_6.CATPart  Puma_Link_7.CATPart  Puma_link_1.CATPart  Puma_link_2.CATPart  Puma_link_3.CATPart  Puma_link_4.CATPart  Puma_link_5.CATPart
Pick and Place with Dellmia/rob21/Robot_TP3/Robot_TP3/: 312_Work_Cell_Layout_Simple.CATProduct  312_Work_Cell_TP2_traj_1.CATProcess  Cube.CATProduct
Pick and Place with Dellmia/rob21/TP1/: 312_Work_Cell_Layout_Simple.CATProduct  312_Work_Cell_TP1.CATProcess  Cube.CATProduct  Griper.CATProduct  Layout_1.CATProduct  Layout_2.CATProduct  RH-20SQH10030C.CATProduct  Safety.CATProduct  _NPart#64676.CATPart
Ros2/Biglide _simulation ros2/ros2/install/: local_setup.sh  setup.sh
Ros2/Biglide _simulation ros2/ros2/log/: latest_build
Ros2/Ros2_8_Dof simulator/ros2_ws/install/: setup.sh  setup.zsh
Ros2_8_Dof simulator/ros2_ws/install/: setup.bash  setup.ps1
Ros2_8_Dof simulator/ros2_ws/log/: latest_build  latest_list
Ros2_8_Dof simulator/ros2_ws/src/iiwa_ros2/iiwa_controllers/iiwa_control/: package.xml
manipulator modeling/: DH_KR16.yml  DH_Turret.yml  DH_UR10.yml  control.cpp  dh_example.yml  robot_kr16.cpp  robot_turret.cpp  robot_ur10.cpp
opencv_python/: cv.py  cv_2.py
underwater_vehicle/: waypoints.cpp
underwater_vehicle/ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
underwater_vehicle/ros2/src/ecn_auv_lab/params/: ekf.yaml
(+316 files in other folders)
